--- a/Research/index.html
+++ b/Research/index.html
@@ -5,5 +5,5 @@ title: Research
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
 		
-<img src="https://reynoird-lab.github.io/Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling" align="left" width="700" style="margin: 0px 20px 20px 0px;" /> <p align="justify"> Our recent works focus on the discovery of new SMYD2 and SMYD3 signaling. We identified several new substrate candidates and we are now in the process of characterizing corresponding new lysine methylation signaling. Meanwhile, we aim to unravel activity of uncharacterized KMTs, as theoretically more than hundred human enzymes can methylate lysines. <br>
+<img src="https://reynoird-lab.github.io/Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling" align="left" width="700" style="margin: 0px 20px 20px 0px;" /> <p align="justify"> Our recent works focus on the discovery of new SMYD2 and SMYD3 signaling. We identified several new substrate candidates and we are now in the process of characterizing corresponding new lysine methylation signaling. Meanwhile, we aim to unravel activity of uncharacterized KMTs, as theoretically more than hundred human enzymes can methylate lysines.</p><br>
 </p>
