--- a/People/index.html
+++ b/People/index.html
@@ -8,12 +8,12 @@ title: People
 
 
 <p>
-<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="NR" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p align="middle">Nicolas REYNOIRD, PhD: <i>Group Leader</i><br></p>  
+<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="NR" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" br clear="left" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p align="middle">Nicolas REYNOIRD, PhD: <i>Group Leader</i><br></p>  
 <br><br>  
-<a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p align="middle">Jessica Vayr: <i>Technician</i><br></p> 
+<a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" br clear="left" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p align="middle">Jessica Vayr: <i>Technician</i><br></p> 
 <br><br>  
-<a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p align="middle">Tanveer Ahmad, PhD: <i>postdoc</i><br></p>
+<a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" br clear="left" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p align="middle">Tanveer Ahmad, PhD: <i>postdoc</i><br></p>
 <br><br>  
-<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> </a> <p align="middle">Alexandre Casanova: <i>PhD student</i><br></p> 
+<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" br clear="left" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> </a> <p align="middle">Alexandre Casanova: <i>PhD student</i><br></p> 
 <br> <br> <br> <br> <br>  
 </p>
