--- a/People/index.html
+++ b/People/index.html
@@ -10,7 +10,7 @@ title: People
 <p>
 <a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="NR" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <br><p>Nicolas REYNOIRD, PhD: <i>Group Leader</i><br></p>  
 <br><br>  
-<a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p>Tanveer Ahmad, PhD: <i>postdoc</i><br></p>
+<a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p>Tanveer Ahmad, PhD: <i>Postdoc</i><br></p>
 <br><br>  
 <a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> </a> <p>Alexandre Casanova: <i>PhD student</i><br></p> 
 <br><br>
