--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -4,8 +4,9 @@ title: People
 ---
 	<h1>{{ page.title }}</h1>
 
-<img src="https://reynoird-lab.github.io/Images/3a5902d3-8cbb-4b4c-8285-1d4171cc1603.jpg" title="group1" align="left" width="250" style="margin: 0px 20px 0px 0px;"/><img src="https://reynoird-lab.github.io/Images/45d2820b-e824-4515-9070-93c9ee50ccf9.jpg" title="group2" align="left" width="250" style="margin: 0px 20px 0px 0px;"/>
+<div><img src="https://reynoird-lab.github.io/Images/3a5902d3-8cbb-4b4c-8285-1d4171cc1603.jpg" title="group1" align="left" width="260" /><img src="https://reynoird-lab.github.io/Images/45d2820b-e824-4515-9070-93c9ee50ccf9.jpg" title="group2" align="left" width="250" /></div>
 
+<p>
 Valentina Lukinovic, postdoctoral researcher<br><br>  
 Gael Roth, MD-PhD student<br><br>  
 Xue Yang, Master 2 student<br><br> 	
