--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -4,16 +4,16 @@ title: People
 ---
 	<h1>{{ page.title }}</h1>
 
-<div><img src="https://reynoird-lab.github.io/Images/3a5902d3-8cbb-4b4c-8285-1d4171cc1603.jpg" title="group1" align="left" width="350" /><img src="https://reynoird-lab.github.io/Images/45d2820b-e824-4515-9070-93c9ee50ccf9.jpg" title="group2" width="300" /></div>
+<div><img src="https://reynoird-lab.github.io/Images/3a5902d3-8cbb-4b4c-8285-1d4171cc1603.jpg" title="group1" align="left" width="350" style="margin: 0px 10px 0px 0px;"/><img src="https://reynoird-lab.github.io/Images/45d2820b-e824-4515-9070-93c9ee50ccf9.jpg" title="group2" width="310" /></div>
 
 <p>
 Valentina Lukinovic, postdoctoral researcher<br>  
-Gael Roth, MD-PhD student<br>< 
-Xue Yang, Master 2 student<br>	
-Nour El Hussein, Master 1 student<br>
-Lea Baudret, Master 1 student<br>
-Sara Cannito, Master 1 student<br>
-Marina Callandret, L3 student<br>
-Nadia Cote, L3 student<br>
-Olivier Leclaire, L3 student<br>  
+<br>Gael Roth, MD-PhD student<br> 
+<br>Xue Yang, Master 2 student<br>	
+<br>Nour El Hussein, Master 1 student<br>
+<br>Lea Baudret, Master 1 student<br>
+<br>Sara Cannito, Master 1 student<br>
+<br>Marina Callandret, L3 student<br>
+<br>Nadia Cote, L3 student<br>
+<br>Olivier Leclaire, L3 student<br>  
 </p>
