--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -7,13 +7,13 @@ title: Alumni
 <div><img src="https://reynoird-lab.github.io/Images/sortie_resto.jpg" title="group1" align="left" width="325" style="margin: 0px 25px 0px 0px;"/><img src="https://reynoird-lab.github.io/Images/sortie_parc.jpg" title="group2" width="325" /></div>
 
 <p>
-Valentina Lukinovic, postdoctoral researcher<br>  
-<br>Gael Roth, MD-PhD student<br> 
-<br>Xue Yang, Master 2 student<br>	
-<br>Nour El Hussein, Master 1 student<br>
-<br>Lea Baudret, Master 1 student<br>
-<br>Sara Cannito, Master 1 student<br>
-<br>Marina Callandret, L3 student<br>
-<br>Nadia Cote, L3 student<br>
-<br>Olivier Leclaire, L3 student<br>  
+	<b>Valentina Lukinovic</b> <i>postdoctoral researcher</i><br>  
+<br><b>Gael Roth</b> <i>MD-PhD student</i><br> 
+<br><b>Xue Yang</b> <i>Master 2 student</i><br>	
+<br><b>Nour El Hussein</b> <i>Master 1 student</i><br>
+<br><b>Lea Baudret</b> <i>Master 1 student</i><br>
+<br><b>Sara Cannito</b> <i>Master 1 student</i><br>
+<br><b>Marina Callandret</b> <i>L3 student</i><br>
+<br><b>Nadia Cote</b> <i>L3 student</i><br>
+<br><b>Olivier Leclaire </b><i>L3 student</i><br>  
 </p>
