--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -7,8 +7,8 @@ title: Alumni
 <div><img src="https://reynoird-lab.github.io/Images/sortie_resto.jpg" title="group1" align="left" width="325" style="margin: 0px 25px 0px 0px;"/><img src="https://reynoird-lab.github.io/Images/sortie_parc.jpg" title="group2" width="325" /></div>
 
 <p>
-	<b>Valentina Lukinovic</b> <i>postdoctoral researcher</i><br>  
-<br><b>Gael Roth</b> <i>MD-PhD student</i><br> 
+<a href="https://www.researchgate.net/profile/Valentina_Lukinovic"> <img alt="VL" src="https://reynoird-lab.github.io/Images/valentina_lukinovic.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Valentina Lukinovic</b> <i>postdoctoral researcher</i><br>  
+<a href="https://www.researchgate.net/profile/Gael_Roth"> <img alt=GR" src="https://reynoird-lab.github.io/Images/gaels_roth.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Gael Roth</b> <i>MD-PhD student</i><br> 
 <br><b>Xue Yang</b> <i>Master 2 student</i><br>	
 <br><b>Nour El Hussein</b> <i>Master 1 student</i><br>
 <br><b>Lea Baudret</b> <i>Master 1 student</i><br>
