--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -11,17 +11,17 @@ title: Alumni
 <br>
 		<a href="https://www.researchgate.net/profile/Gael_Roth"> <img alt=GR" src="https://reynoird-lab.github.io/Images/gael_roth.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Gael Roth</b> <br><i>MD-PhD student</i></p><br> 
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Xue Yang</b> <br><i>Master 2 student</i></p><br>	
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Xue Yang</b> <br><i>Master 2 student</i></p><br>	
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Nour El Hussein</b> <br><i>Master 1 student</i></p><br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Nour El Hussein</b> <br><i>Master 1 student</i></p><br>
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Lea Baudret</b> <br><i>Master 1 student</i></p><br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Lea Baudret</b> <br><i>Master 1 student</i></p><br>
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Sara Cannito</b> <br><i>Master 1 student</i></p><br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Sara Cannito</b> <br><i>Master 1 student</i></p><br>
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Marina Callandret</b> <br><i>L3 student</i></p><br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Marina Callandret</b> <br><i>L3 student</i></p><br>
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Nadia Cote</b> <br><i>L3 student</i></p><br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Nadia Cote</b> <br><i>L3 student</i></p><br>
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Olivier Leclaire </b><br><i>L3 student</i></p><br>  
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Olivier Leclaire </b><br><i>L3 student</i></p><br>  
 </p>
