--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -4,7 +4,7 @@ title: Alumni
 ---
 	<h1>{{ page.title }}</h1>
 
-<div><img src="https://reynoird-lab.github.io/Images/sortie_resto.jpg" title="group1" align="left" width="225" style="margin: 0px 10px 0px 0px;"/><img src="https://reynoird-lab.github.io/Images/sortie_parc.jpg" title="group2" width="225" style="margin: 0px 10px 0px 0px;" /> <img src="https://reynoird-lab.github.io/Images/grenoble.jpg" title="grenoble" width="225" style="margin: 0px 10px 0px 0px;" /></div>
+<div><img src="https://reynoird-lab.github.io/Images/sortie_resto.jpg" title="group1" align="left" width="215" /><img src="https://reynoird-lab.github.io/Images/sortie_parc.jpg" title="group2" width="215" /> <img src="https://reynoird-lab.github.io/Images/grenoble.jpg" title="grenoble" width="215" /></div>
 
 <p>
 <br>
