--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
----
+r---
 layout: default
 title: REYNOIRD Lab
 ---
@@ -9,7 +9,7 @@ title: REYNOIRD Lab
 		<h2>Lysine methylation-based cell signaling in cancer</h2>
 	
 
-<div><img src="Images/IAB.jpg" title="IAB" align="left" width="700" style="margin: 0px 20px 0px 0px;"/><p align="bottom" align="justify"><i><h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</p></i></h2>
+<div><img src="Images/IAB.jpg" title="Reynoird lab IAB" align="left" width="700" style="margin: 0px 20px 0px 0px;"/><p align="bottom" align="justify"><i><h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</p></i></h2>
 </div>
 <div><p align="justify">Lysine methylation is a covalent post-translational modification (PTM) contributing to all aspects of cell biology, and which deregulation often leads to human pathologies such as cancer. 
 	Our group was created in 2017 and is currently hosted within Pr. Hainaut lab at the Institute for Advanced Biosciences, Grenoble, FRANCE. <br>
