--- a/Research/index.html
+++ b/Research/index.html
@@ -2,6 +2,8 @@
 layout: default
 title: Research
 ---
+<meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer. We are part of the Institute for Advanced Biosciences, based in Grenoble, France."/>
+
 	<h1>{{ page.title }}</h1>
 		
 <img src="https://reynoird-lab.github.io/Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling" align="left" width="700" style="margin: 0px 20px 10px 0px;"/> <p align="justify"> Lysine methylation signaling is a dynamic process thanks to the lysine methyltransferases (KMTs, catalyzing addition of methyl groups), lysine demethylases (KDMs, erasing such modifications) and specific methyl-binders (promoting appropriate responses). Lysine methylation of histone proteins are known to fundamentally regulate chromatin function, however there is a growing appreciation that a number of non-histone proteins undergo lysine methylation. Thus, it is likely that many proteins involved in cell homeostasis are methylated and that deregulation in protein methylation signaling may play a role in various diseases. Despite the fundamental role for this modification in biology, relatively few protein lysine methylation substrates have been identified and the function of lysine methylation signaling rarely characterized. <br></div>
