--- a/Publications/index.html
+++ b/Publications/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Publications
 ---
+<meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer. We are part of the Institute for Advanced Biosciences, based in Grenoble, France."/>
 
 <div class="blurb">
 	<h1>Publications</h1>
