--- a/Research/index.html
+++ b/Research/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Research
 ---
-<meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer. We are part of the Institute for Advanced Biosciences, based in Grenoble, France."/>
+<meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer."/>
 
 	<h1>{{ page.title }}</h1>
 		
