--- a/Research/index.html
+++ b/Research/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Research
+title: REYNOIRD Lab: Research
 ---
 <meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer."/>
 
