--- a/People/index.html
+++ b/People/index.html
@@ -19,13 +19,13 @@ title: People
 <br>  
 <img alt="LB" src="https://reynoird-lab.github.io/Images/Ludivine_Bischoff.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Ludivine Bischoff: </b><br><i>PhD student</i><br>
 <br>
-<img alt="trainee" src="https://reynoird-lab.github.io/Images/Emilie-Froeliger.JPG" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Emilie Froeliger:</b><br><i>PhD student</i><br></p>
+<img alt="EF" src="https://reynoird-lab.github.io/Images/Emilie-Froeliger.JPG" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Emilie Froeliger:</b><br><i>PhD student</i><br></p>
 <br>
 <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Jessica Vayr: </b><br><i>Project Engineer (IE)</i><br></p> 
 <br>
-<img alt="trainee" src="https://reynoird-lab.github.io/Images/razane.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Razane Beyh:</b><br><i>Master student</i><br></p>
+<img alt="razane" src="https://reynoird-lab.github.io/Images/razane.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Razane Beyh:</b><br><i>Master student</i><br></p>
 <br>
-<img alt="trainee" src="https://reynoird-lab.github.io/Images/yoana.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Yoana Yankulova:</b><br><i>Master student</i><br></p>
+<img alt="yoana" src="https://reynoird-lab.github.io/Images/yoana.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Yoana Yankulova:</b><br><i>Master student</i><br></p>
 <br>
 <img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Maybe you?</b><br><i></i><br></p>
 <br>
