--- a/People/index.html
+++ b/People/index.html
@@ -23,9 +23,9 @@ title: People
 <br>
 <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Jessica Vayr: </b><br><i>Project Engineer (IE)</i><br></p> 
 <br>
-<img alt="razane" src="https://reynoird-lab.github.io/Images/razane.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Razane Beyh:</b><br><i>Master student</i><br></p>
+<img alt="razane" src="https://reynoird-lab.github.io/Images/razane.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Razane Beyh:</b><br><i>Master student</i><br></p>
 <br>
-<img alt="yoana" src="https://reynoird-lab.github.io/Images/yoana.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Yoana Yankulova:</b><br><i>Master student</i><br></p>
+<img alt="yoana" src="https://reynoird-lab.github.io/Images/yoana.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Yoana Yankulova:</b><br><i>Master student</i><br></p>
 <br>
 <img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Maybe you?</b><br><i></i><br></p>
 <br>
