--- a/Media coverage/index.html
+++ b/Media coverage/index.html
@@ -19,11 +19,11 @@ title: Media coverage
 <div class="div-categoryContainer">
 	<img src="https://reynoird-lab.github.io/Images/followus.png" title="MESR" width="220" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <div class="paragraph-right">
-  <p align="justify"> Follow the Reynoird lab in different ways! 
-- <a href="https://x.com/reynoirdlab" "style="color:DARKSLATEGRAY;"> X / Twitter </a>
-- <a href="https://www.linkedin.com/in/nicolas-reynoird-06a4375/" "style="color:DARKSLATEGRAY;"> Linkedin </a>
-- <a href="https://iab-grenoble.fr/en/recherche/equipes/dynamique-de-la-methylation-des-proteines-dans-le-cancer" "style="color:DARKSLATEGRAY;"> IAB website </a>
-- <a href="https://reynoird-lab.github.io/" "style="color:DARKSLATEGRAY;"> Reynoird lab website </a></p> 
+  <p align="justify"> Follow the Reynoird lab in different ways! <hr>
+- <a href="https://x.com/reynoirdlab" "style="color:DARKSLATEGRAY;"> X / Twitter </a><hr>
+- <a href="https://www.linkedin.com/in/nicolas-reynoird-06a4375/" "style="color:DARKSLATEGRAY;"> Linkedin </a><hr>
+- <a href="https://iab-grenoble.fr/en/recherche/equipes/dynamique-de-la-methylation-des-proteines-dans-le-cancer" "style="color:DARKSLATEGRAY;"> IAB website </a><hr>
+- <a href="https://reynoird-lab.github.io/" "style="color:DARKSLATEGRAY;"> Reynoird lab website </a></p> <hr>
 	 </div>
 </div>
 
