--- a/Media coverage/index.html
+++ b/Media coverage/index.html
@@ -7,8 +7,18 @@ title: Media coverage
 	<h1>Reynoird Lab - {{ page.title }}</h1>
 
 <img src="https://reynoird-lab.github.io/Images/MESR.png" title="MESR" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
-  <p align="justify"> Dr Reynoird was interviewed by the French Ministery of education and research (in french) here for "Octobre rose" and the research against breast cancer : <a href="https://www.enseignementsup-recherche.gouv.fr/fr/interview-de-nicolas-reynoird-les-avancees-de-la-recherche-sur-le-cancer-du-sein-97714" "style="color:DARKSLATEGRAY;"> Interview de Nicolas Reynoird : les avancées de la recherche sur le cancer du sein </a> </p>
+  <p align="justify"> Dr Reynoird is interviewed by the French Ministery of education and research (in french) here for "Octobre rose" and the research against breast cancer : <a href="https://www.enseignementsup-recherche.gouv.fr/fr/interview-de-nicolas-reynoird-les-avancees-de-la-recherche-sur-le-cancer-du-sein-97714" "style="color:DARKSLATEGRAY;"> Interview de Nicolas Reynoird : les avancées de la recherche sur le cancer du sein </a> </p>
 	<hr>
+<img src="https://reynoird-lab.github.io/Images/logo_inserm.jpg" title="INSERM" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by INSERM (in french) here : <a href="https://www.inserm.fr/actualite/cancer-du-sein-une-piste-pour-bloquer-la-formation-de-metastases/" "style="color:DARKSLATEGRAY;"> Cancer du sein : une piste pour bloquer la formation de métastases </a> </p>
+	<hr>
+<img src="https://reynoird-lab.github.io/Images/ARC.png" title="ARC" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by the fondation ARC (in french) here : <a href="https://www.fondation-arc.org/pour-lutter-contre-les-cancers-du-sein-avances-deux-pistes-originales" "style="color:DARKSLATEGRAY;"> Pour lutter contre les cancers du sein avancés, deux pistes originales </a> </p>
+	<hr>
+<img src="https://reynoird-lab.github.io/Images/Europe1.png" title="Europe 1" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by EUROPE 1 (in french) here : <a href="https://www.europe1.fr/sante/prevenir-lapparition-des-metastases-le-cnrs-fait-une-decouverte-capitale-pour-lutter-contre-le-cancer-du-sein-4228082" "style="color:DARKSLATEGRAY;"> «Prévenir l'apparition des métastases», le CNRS fait une découverte capitale pour lutter contre le cancer du sein </a> </p>
+	<hr>
+
 <img src="https://reynoird-lab.github.io/Images/followus.png" title="followus" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <p align="justify"> Follow the Reynoird lab in different ways! <hr>
 - <a href="https://x.com/reynoirdlab" "style="color:DARKSLATEGRAY;"> X / Twitter </a><hr>
