--- a/Media coverage/index.html
+++ b/Media coverage/index.html
@@ -15,9 +15,19 @@ title: Media coverage
 <img src="https://reynoird-lab.github.io/Images/ARC.png" title="ARC" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by the fondation ARC (in french) here : <a href="https://www.fondation-arc.org/pour-lutter-contre-les-cancers-du-sein-avances-deux-pistes-originales" "style="color:DARKSLATEGRAY;"> Pour lutter contre les cancers du sein avancés, deux pistes originales </a> </p>
 	<hr>
-<img src="https://reynoird-lab.github.io/Images/Europe1.png" title="Europe 1" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
-  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by EUROPE 1 (in french) here : <a href="https://www.europe1.fr/sante/prevenir-lapparition-des-metastases-le-cnrs-fait-une-decouverte-capitale-pour-lutter-contre-le-cancer-du-sein-4228082" "style="color:DARKSLATEGRAY;"> «Prévenir l'apparition des métastases», le CNRS fait une découverte capitale pour lutter contre le cancer du sein </a> </p>
+<img src="https://reynoird-lab.github.io/Images/FranceInfo.png" title="France Info" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by France Info and France 2 (in french) here : <a href="https://www.francetvinfo.fr/sante/cancer/sante-une-decouverte-prometteuse-du-cnrs-contre-le-cancer-du-sein_6338056.html" "style="color:DARKSLATEGRAY;"> Santé : une découverte prometteuse du CNRS contre le cancer du sein</a> </p>
 	<hr>
+<img src="https://reynoird-lab.github.io/Images/Europe1.png" title="Europe 1" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by EUROPE 1 (in french) here : <a href="https://www.europe1.fr/sante/prevenir-lapparition-des-metastases-le-cnrs-fait-une-decouverte-capitale-pour-lutter-contre-le-cancer-du-sein-4228082" "style="color:DARKSLATEGRAY;"> Prévenir l'apparition des métastases», le CNRS fait une découverte capitale pour lutter contre le cancer du sein </a> </p>
+	<hr>
+<img src="https://reynoird-lab.github.io/Images/France3.jpg" title="Europe 1" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by France 3 (in french) here : <a href="https://france3-regions.francetvinfo.fr/auvergne-rhone-alpes/isere/grenoble/cancer-du-sein-un-laboratoire-de-grenoble-fait-une-decouverte-importante-dans-le-developpement-des-metastases-2916438.html" "style="color:DARKSLATEGRAY;"> Cancer du sein : un laboratoire de Grenoble fait une découverte importante dans le développement des métastases </a> </p>
+	<hr>
+<img src="https://reynoird-lab.github.io/Images/Santémag.jpeg" title="Santé magazine" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by France 3 (in french) here : <a href="https://www.santemagazine.fr/actualites/actualites-sante/cancer-du-sein-une-nouvelle-proteine-participant-au-developpement-de-metastases-decouverte-1055720" "style="color:DARKSLATEGRAY;"> Cancer du sein : des chercheurs découvrent une nouvelle protéine participant au développement de métastases </a> </p>
+	<hr>
+
 
 <img src="https://reynoird-lab.github.io/Images/followus.png" title="followus" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <p align="justify"> Follow the Reynoird lab in different ways! <hr>
